# fit-upload

./: .gitignore  90-garmin.rules  Cargo.toml  Makefile  README.md  setup.sh  upload.sh
src/: main.rs
