[package]
name = "fit-upload"
version = "0.1.0"
authors = ["alidaka <alidaka@gmail.com>"]
edition = "2018"

[dependencies]
structopt = "0.3.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
oauth2 = "1.1.2"
rouille = "3.0.0"
chrono = { version = "0.4", features = ["serde"] }
